# Math-Data-Science-Stats-Explorations

./: .gitignore  bayes-classification.cpp  bc  datastructures.c  deepdiveintodata.c  ebc  exact-bayes.cpp  fastest_str_rev.c  hexadecimal-repr  hexadecimal-repr.c  least-square-regression.cpp  linear-congruence-pseudo-random  linear-congruence-pseudo-random.cpp  mab  matrix-multiplication.cpp  multi-armed-bandit.cpp  pi  pi.cpp  random-permutation-testing  random-permutation-testing.cpp  readme.md
firewal_problem/: Cargo.toml  prob.md
firewal_problem/src/: main.rs
least-squares-regression/: intuition_test.py  least-square-regression.cpp  readme.md  slr
monty_hall/: main.py
sorting/: CMakeLists.txt  sorting.cc
square_prime_factors_II/: Cargo.toml
square_prime_factors_II/src/: main.rs
stochaistic-gradient-descent/: Cargo.toml  chimp_brain_testing.py  data.csv  readme.md
stochaistic-gradient-descent/src/: main.rs
